--- a/app/en/gallery/index.html
+++ b/app/en/gallery/index.html
@@ -1074,7 +1074,7 @@
                            class="pull-left gap-right mobw100" height="150" width="150">
                         <div class="photo-title">Himalayan Vulture</div>
                         <div class="photo-location">Gansu, China</div>
-                        <div class="photographer-name">Jiang Yan</div>
+                        <div class="photographer-name">Yan Jiang </div>
                         <div class="photographer-location">Shanghai, China</div>
                         <!-- <a href="https://www.instagram.com/faisalalnomas/" class="myButton2">Photographer's Website</a> -->
                      </div>
